# littleos

./: Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  main.rs  pci.rs  serial.rs
src/: main.rs
